# internal/handler/admin_handler.go
@@ -387,7 +387,7 @@ func (h *AdminHandler) ResetPassword(c *fiber.Ctx) error {
 // @Param       Authorization  header   string                   true  "Token JWT. Formato: Bearer {token}"
 // @Param       id             path     string                   true  "ID del usuario (UUID)"
 // @Param       body           body     SwaggerAssignRoleRequest true  "Datos de la asignación"
-// @Success     201  {object}  map[string]interface{}  "Rol asignado exitosamente"
+// @Success     201  {object}  SwaggerAssignedRoleResponse  "Rol asignado exitosamente"
 // @Failure     400  {object}  SwaggerErrorResponse    "Datos inválidos"
 // @Failure     401  {object}  SwaggerErrorResponse    "No autenticado"
 // @Failure     403  {object}  SwaggerErrorResponse    "Sin permiso"
@@ -499,7 +499,7 @@ func (h *AdminHandler) RevokeRole(c *fiber.Ctx) error {
 // @Param       Authorization  header   string                         true  "Token JWT. Formato: Bearer {token}"
 // @Param       id             path     string                         true  "ID del usuario (UUID)"
 // @Param       body           body     SwaggerAssignPermissionRequest true  "Datos de la asignación"
-// @Success     201  {object}  map[string]interface{}  "Permiso asignado exitosamente"
+// @Success     201  {object}  SwaggerAssignedPermissionResponse  "Permiso asignado exitosamente"
 // @Failure     400  {object}  SwaggerErrorResponse    "Datos inválidos"
 // @Failure     401  {object}  SwaggerErrorResponse    "No autenticado"
 // @Failure     403  {object}  SwaggerErrorResponse    "Sin permiso"
@@ -761,7 +761,7 @@ func (h *AdminHandler) CreateRole(c *fiber.Ctx) error {
 // @Param       X-App-Key      header   string  true  "Clave secreta de la aplicación"
 // @Param       Authorization  header   string  true  "Token JWT. Formato: Bearer {token}"
 // @Param       id             path     string  true  "ID del rol (UUID)"
-// @Success     200  {object}  map[string]interface{}  "Detalles del rol"
+// @Success     200  {object}  SwaggerRoleDetailResponse  "Detalles del rol"
 // @Failure     400  {object}  SwaggerErrorResponse    "ID inválido"
 // @Failure     401  {object}  SwaggerErrorResponse    "No autenticado"
 // @Failure     403  {object}  SwaggerErrorResponse    "Sin permiso"
